fix: text wrap on constrained views

--- a/src/apps/content-editor/src/app/views/NotFound/NotFound.less
+++ b/src/apps/content-editor/src/app/views/NotFound/NotFound.less
@@ -1,12 +1,10 @@
 @import "~@zesty-io/core/typography.less";
 .NotFound {
-  width: 85vw;
   height: 100vh;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 
   .wrap {
     width: 70rem;
